# mlops-energy-forecast

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  dvc.yaml  fix.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: ci_cd_pipeline.yml
airflow/dags/: energy_forecast_dag.py
configs/: model_config.yaml
docker/: Dockerfile  Dockerfile.airflow  Dockerfile.api  Dockerfile.training  docker-compose.yml  requirements-api.txt
metrics/: test_metrics.json  train_metrics.json  validation_results.json
models/: feature_importance.csv
monitoring/: drift_report.json
monitoring/grafana/dashboards/: energy_dashboard.json
monitoring/prometheus/: prometheus.yml
notebooks/: 01_eda.ipynb
report/: rapport_mlops_energy.docx  ~$pport_mlops_energy.docx
src/api/: main.py
src/data/: cleaning.py  ingestion.py  validation.py
src/features/: build_features.py
src/models/: compare_models.py  evaluate.py  local_predict.py  train.py
src/monitoring/: auto_retrain.py  drift_detection.py  grafana_dashboard.json  prometheus.yml
streamlit_app/: app.py
streamlit_app/pages/: 01_EDA_Dashboard.py  02_Prediction.py  03_Monitoring.py
streamlit_app/utils/: api_client.py
tests/: test_api.py  test_data.py  test_features.py
